2001-12-06  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* main.c: call gnome_program_init() before the ICE stuff so that
	  things get initialized in the right order. This kills a few
	  warnings.

2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* gnome-wm: config stuff (default.wm) goes in $HOME/.gnome2 now
	  (but it's a variable at the top, so it is easy to change back
	  later).

2001-12-01  Havoc Pennington  <hp@pobox.com>

	* gnome-wm: prefer Metacity to Enlightenment - take that!

2001-11-29  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: comment out capplet SOURCES.

2001-11-28  Mark McLoughlin  <mark@skynet.ie>

	* gsm-protocol.c: (gsm_protocol_new), (dispatch_event): use
	  g_idle_add instead of gtk_idle_add and save a few
	  stackframes.

2001-11-27  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	install .desktop files to datadir/applications
	
	* save-session.desktop:
	* session-properties.desktop:
	* session.desktop:

	Add Categories field.
	
Tue Nov 27 17:21:46 2001  Owen Taylor  <otaylor@redhat.com>

	* gsm-client-editor.c (change): Fix error in retrieving
	activate child by using gtk_option_menu_get_history().

	* gsm-client-row.c (create_stock_menu_pixmaps): Do this
	in a _bit_ more sane way that actually warks.

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: remove gsm-protocol.c rule.

	* main.c: (set_lang): warning fix.

Mon, 19 Nov 2001 01:25:40 -0500 Frank Belew <frb@ximian.com>

	* Makefile.am: added gsm-marshal.list to EXTRA_DIST
	* gnome-login-check.c, main.c, save-session.c,
	  session-properties-capplet.c, session-properties.c:
	  replaced PACKAGE with GETTEXT_PACKAGE on all
          calls to bindtextdomain and textdomain

2001-11-12  Frank Belew <frb@ximian.com>
	
	* Makefile.am: comment out SUBDIRS entirely, or Makefiles break

2001-11-03  Glynn Foster <glynn.foster@sun.com> 

	* main.c: Align with the gnome_client_get_destop_id in libgnomeui